Removed hello word. Updated schema. Attached in memory database lokiJS
