# api/swagger/swagger.yaml
@@ -1,7 +1,7 @@
 swagger: "2.0"
 info:
   version: "0.0.1"
-  title: "Shopping List App"
+  title: Shopping List App
 # during dev, should point to your local machine
 host: localhost:10010
 # basePath prefixes all resource paths 
@@ -18,43 +18,118 @@ consumes:
 produces:
   - application/json
 paths:
-  /hello:
-    # binds a127 app logic to a route
-    x-swagger-router-controller: hello_world
+  /:
     get:
-      description: Returns 'Hello' to the caller
-      # used as the method name of the controller
-      operationId: hello
-      parameters:
-        - name: name
-          in: query
-          description: The name of the person to whom to say hello
-          required: false
-          type: string
+      description: "Returns all items in the shopping list."
+      operationId: "getItems"
+      parameters: []
       responses:
-        "200":
-          description: Success
+        200:
+          description: "An array of items"
           schema:
-            # a pointer to a definition
-            $ref: "#/definitions/HelloWorldResponse"
-        # responses may fall through to errors
-        default:
-          description: Error
+            type: "array"
+            items:
+              $ref: "#/definitions/Item"
+      x-swagger-router-controller: "ShoppingListApi"
+    post:
+      description: "Add a new Item to the shooping list."
+      operationId: "addItem"
+      produces:
+      - "application/json"
+      parameters:
+      - in: "body"
+        name: "item"
+        description: "the Item to be added"
+        required: true
+        schema:
+          $ref: "#/definitions/Item"
+      responses:
+        200:
+          description: "Successful Item add"
+          schema: 
+            $ref: "#/definitions/AddResponse"
+      x-swagger-router-controller: "ShoppingListApi"
+  /item/{id}:
+    get:
+      description: "Retrieve an item by id from the shooping list."
+      operationId: "getItemById"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "id"
+        in: "path"
+        description: "ID of the item to get"
+        required: true
+        type: "integer"
+        format: "int64"
+      responses:
+        200:
+          description: "Item response"
           schema:
-            $ref: "#/definitions/ErrorResponse"
+            $ref: "#/definitions/Item"
+      x-swagger-router-controller: "ShoppingListApi"
+    delete:
+      description: "Delete a item by Id"
+      operationId: "deleteItemById"
+      parameters:
+      - name: "id"
+        in: "path"
+        description: "id of the item to delete"
+        required: true
+        type: "integer"
+        format: "int64"
+      responses:
+        204:
+          description: "item deleted"
+      x-swagger-router-controller: "ShoppingListApi"
+    put:
+      description: "Update a single to by id"
+      operationId: "updateItemById"
+      parameters:
+      - name: "id"
+        in: "path"
+        description: "Id of the item being updated"
+        required: true
+        type: "integer"
+        format: "int64"
+      - name: "updated_item"
+        in: "body"
+        description: "the updated item"
+        required: true
+        schema:
+          $ref: "#/definitions/Item"
+      responses:
+        200:
+          description: "Item updated"
+        400:
+          description: "Ups.. something went wrong."
+      x-swagger-router-controller: "ShoppingListApi"
   /swagger:
     x-swagger-pipe: swagger_raw
 # complex objects have schema definitions
 definitions:
-  HelloWorldResponse:
-    required:
-      - message
+  Item:
+    type: "object"
     properties:
-      message:
-        type: string
-  ErrorResponse:
-    required:
-      - message
+      item_id:
+        type: "integer"
+        description: "Item id"
+      name:
+        type: "string"
+        description: "Item name"
+      created:
+        type: "string"
+        format: "date-time"
+        description: "Item created timestamp"
+      type:
+        type: "string"
+        description: "Item type"
+      bought:
+        type: "boolean"
+        description: "Indicates if the item has been bought or not"
+  AddResponse:
+    type: "object"
     properties:
-      message:
-        type: string
+      id:
+        type: "integer"
+        description: "Added item id"
